--- a/index.html
+++ b/index.html
@@ -2,10 +2,9 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>SYRONE JOHNMAY D. ALIBIN</title>
   <style>
-    /* Reset and base styling */
     * {
       margin: 0;
       padding: 0;
@@ -17,7 +16,6 @@
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     }
 
-    /* Background image full cover */
     body {
       background: url('me.jpg') no-repeat center center fixed;
       background-size: cover;
@@ -27,62 +25,59 @@
       justify-content: center;
       align-items: center;
       text-align: center;
-      padding: 20px;
-      backdrop-filter: brightness(0.4);
+      backdrop-filter: brightness(0.5);
+    }
+
+    header {
+      background-color: rgba(0, 0, 0, 0.6);
+      padding: 1rem 2rem;
+      border-radius: 10px;
     }
 
     h1 {
-      font-size: 3em;
-      margin-bottom: 10px;
-      letter-spacing: 2px;
-    }
-
-    p {
-      font-size: 1.2em;
-      margin-bottom: 40px;
-      max-width: 600px;
-      line-height: 1.6;
+      font-size: 3rem;
+      margin-bottom: 1rem;
+      letter-spacing: 1px;
     }
 
     nav {
-      display: flex;
-      gap: 30px;
+      margin-top: 1rem;
     }
 
     nav a {
       text-decoration: none;
       color: #ffffff;
-      font-weight: bold;
-      padding: 10px 20px;
-      border: 2px solid #ffffff;
-      border-radius: 30px;
-      transition: all 0.3s ease;
+      background: rgba(255, 255, 255, 0.1);
+      padding: 0.6rem 1.2rem;
+      margin: 0 0.5rem;
+      border-radius: 5px;
+      transition: background 0.3s ease;
     }
 
     nav a:hover {
-      background-color: rgba(255, 255, 255, 0.1);
-      transform: scale(1.05);
+      background: rgba(255, 255, 255, 0.3);
     }
 
     @media (max-width: 600px) {
       h1 {
-        font-size: 2em;
+        font-size: 2rem;
       }
 
-      nav {
-        flex-direction: column;
-        gap: 20px;
+      nav a {
+        display: block;
+        margin: 0.5rem 0;
       }
     }
   </style>
 </head>
 <body>
-  <h1>SYRONE JOHNMAY D. ALIBIN</h1>
-  <p>Welcome to my personal space on the web. I'm passionate about learning, exploring, and expressing myself creatively. Get to know more about me through the links below.</p>
-  <nav>
-    <a href="about.html">About Me</a>
-    <a href="blog.html">Blog</a>
-    <a href="contact.html">Contact</a>
-  </nav>
+  <header>
+    <h1>Hello, I'm SYRONE JOHNMAY D. ALIBIN</h1>
+    <nav>
+      <a href="about.html">About Me</a>
+      <a href="blog.html">My Hobbies</a>
+      <a href="contact.html">Contact</a>
+    </nav>
+  </header>
 </body>
 </html>
