--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
   <p>Welcome to my personal space on the web. I'm passionate about learning, exploring, and expressing myself creatively. Get to know more about me through the links below.</p>
   <nav>
     <a href="about.html">About Me</a>
-    <a href="blog.html">My Hobbies</a>
+    <a href="blog.html">Blog</a>
     <a href="contact.html">Contact</a>
   </nav>
 </body>
